@@ -24,7 +24,7 @@
         <rest-assured.version>5.3.0</rest-assured.version>
         <scribejava-apis.version>8.3.1</scribejava-apis.version>
         <json.version>20231013</json.version>
-        <gson.version>2.10.1</gson.version>
+<!--        <gson.version>2.10.1</gson.version>-->
         <javafaker.version>1.0.2</javafaker.version>
         <lombok.version>1.18.32</lombok.version>
         <awaitility.version>4.2.0</awaitility.version>
@@ -120,12 +120,12 @@
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
-        </dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.google.code.gson/gson &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.code.gson</groupId>-->
+<!--            <artifactId>gson</artifactId>-->
+<!--            <version>${gson.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
@@ -183,6 +183,10 @@
                         <extent.reporter.spark.start>true</extent.reporter.spark.start>
                         <extent.reporter.spark.out>test-output/SparkReport/Spark.html</extent.reporter.spark.out>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
